fix: Work around for last column wrapping.
This is a bit of a hack, but I can't find another way to solve it.
The issue may have to do with floating point accuracy or something like that
but I can't confirm.  This does seem to work though.

--- a/src/app/board/columns/issue_columns.scss
+++ b/src/app/board/columns/issue_columns.scss
@@ -55,7 +55,6 @@ ul.issue-columns, ul.milestone-columns {
 }
 
 .column {
-    width: 16%;
     margin: 0;
     padding: 0 10px;
     margin-before: 0;
